# SimpleEngine

./: CMakeLists.txt
simpleenginecore/: CMakeLists.txt
simpleenginecore/src/SimpleEngineCore/Utils/: test.cpp
simpleengineeditor/: CMakeLists.txt
simpleengineeditor/src/: main.cpp
